--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-imagetools": "^9.0.0"
   }
 }
